--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="about-editorial-grid">
                     <div class="about-visual reveal-block delay-2 cinematic-focus-container">
-                        <video src="videos/tu-video-about.mp4" class="editorial-img cinematic-portrait" id="scroll-focus-img" autoplay muted loop playsinline></video>
+                        <video src="tu-video-about.mp4" class="editorial-img cinematic-portrait" id="scroll-focus-img" autoplay muted loop playsinline></video>
                     </div>
                     <div class="about-copy">
                         <span class="about-badge reveal-block delay-3">Nuestra Esencia</span>
@@ -210,7 +210,7 @@
         <div class="monolith-panel" data-yt-id="MqXLyt2LGLI">
             <img class="monolith-cover" src="cover-fiat.jpg" alt="FIAT Venezuela">
             <video class="monolith-video-bg" muted loop playsinline preload="none">
-                <source src="videos/FIATcomercial.mp4" type="video/mp4">
+                <source src="FIATcomercial.mp4" type="video/mp4">
             </video>
             <div class="monolith-overlay"></div>
             <div class="monolith-panel-inner">
@@ -229,7 +229,7 @@
         <div class="monolith-panel" data-yt-id="vrqXJUte8Ss">
             <img class="monolith-cover" src="img/cover-golden.jpg" alt="Golden Dog Contest">
             <video class="monolith-video-bg" muted loop playsinline preload="none">
-                <source src="videos/tu-video-vertical.mp4" type="video/mp4">
+                <source src="tu-video-vertical.mp4" type="video/mp4">
             </video>
             <div class="monolith-overlay"></div>
             <div class="monolith-panel-inner">
