--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <img src="zeniqlogoproyects.png" alt="ZENIQ Creative Lab" class="hero-logo" fetchpriority="high">
                 </div>
                 <div class="text-mask-container">
-                    <p class="hero-subtitle entrance-slide delay-2">BUILDING A WORLD WITH REAL FILMS</p>
+                    <p class="hero-subtitle entrance-slide delay-2">BUILDING A WORLD WITH REAL EXPERIENCES</p>
                 </div>
                 <div class="entrance-fade delay-3">
                     <a href="#reel" class="hero-cta hover-target magnetic">
@@ -119,8 +119,8 @@
                     </div>
                     <div class="about-copy">
                         <span class="about-badge reveal-block delay-3">Nuestra Esencia</span>
-                        <h3 class="reveal-block delay-4">Diseño con <br>Prop&#243;sito Absoluto</h3>
-                        <p class="reveal-block delay-5">Somos un estudio creativo forjado en la intersección del arte y la tecnología. Transformamos ideas complejas en experiencias digitales fluidas, elegantes y memorables.</p>
+                        <h3 class="reveal-block delay-4">THE LAB <br>EN TU MARCA</h3>
+                        <p class="reveal-block delay-5">Construimos legados visuales. Somos un laboratorio creativo enfocado en resultados de alta gama. Traducimos la esencia de marcas en un lenguaje cinematográfico que conecta, impacta y perdura.</p>
                         <p class="reveal-block delay-6">Trabajamos con un equipo selecto para garantizar que cada píxel, cada frame y cada línea de código lleve nuestra firma de excelencia. No hacemos proyectos, construimos legados.</p>
                         <div class="entrance-fade delay-3">
                             <a href="#contacto" class="hero-cta hover-target magnetic">
@@ -136,18 +136,18 @@
                 <div class="brands-marquee">
                     <div class="brands-track">
                         <div class="brands-set">
-                            <img src="logos/jeep.svg" alt="Jeep" class="brand-logo">
-                            <img src="logos/ram.svg" alt="RAM" class="brand-logo">
-                            <img src="logos/fiat.svg" alt="FIAT" class="brand-logo">
-                            <img src="logos/cliente4.svg" alt="Cliente" class="brand-logo">
-                            <img src="logos/cliente5.svg" alt="Cliente" class="brand-logo">
+                            <img src="jajaja.svg" alt="Jeep" class="brand-logo">
+                            <img src="semprenoi.png" alt="RAM" class="brand-logo">
+                            <img src="jeep.png" alt="JEEP" class="brand-logo">
+                            <img src="RAM.png" alt="Cliente" class="brand-logo">
+                            <img src="beltg.png" alt="Cliente" class="brand-logo">
                         </div>
                         <div class="brands-set">
-                            <img src="logos/jeep.svg" alt="Jeep" class="brand-logo">
-                            <img src="logos/ram.svg" alt="RAM" class="brand-logo">
-                            <img src="logos/fiat.svg" alt="FIAT" class="brand-logo">
-                            <img src="logos/cliente4.svg" alt="Cliente" class="brand-logo">
-                            <img src="logos/cliente5.svg" alt="Cliente" class="brand-logo">
+                            <img src="jajaja.svg" alt="CARCAJADAS" class="brand-logo">
+                            <img src="semprenoi.png" alt="SEMPRENOI" class="brand-logo">
+                            <img src="jeep.png" alt="JEEP" class="brand-logo">
+                            <img src="RAM.png" alt="Cliente" class="brand-logo">
+                            <img src="beltg.png" alt="Cliente" class="brand-logo">
                         </div>
                     </div>
                 </div>
