--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="services-gallery reveal">
                 <div class="service-panel hover-target">
-                    <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&fit=crop&w=800" class="panel-img" alt="Desarrollo Web" loading="lazy">
+                    <img src="code.jpg" class="panel-img" alt="Desarrollo Web" loading="lazy">
                     <div class="panel-overlay"></div>
                     <div class="panel-content">
                         <span class="panel-num">01</span>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="service-panel hover-target">
-                    <img src="https://images.unsplash.com/photo-1492691523567-6170c240538f?auto=format&fit=crop&w=800" class="panel-img" alt="Cinematografía" loading="lazy">
+                    <img src="cinema.jpg" class="panel-img" alt="Cinematografía" loading="lazy">
                     <div class="panel-overlay"></div>
                     <div class="panel-content">
                         <span class="panel-num">02</span>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="service-panel hover-target">
-                    <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&w=800" class="panel-img" alt="Vertical Cinema" loading="lazy">
+                    <img src="vertical.png" class="panel-img" alt="Vertical Cinema" loading="lazy">
                     <div class="panel-overlay"></div>
                     <div class="panel-content">
                         <span class="panel-num">03</span>
