--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div class="panel-overlay"></div>
                     <div class="panel-content">
                         <span class="panel-num">01</span>
-                        <h3>Arquitectura Digital &amp; Desarrollo Web</h3>
+                        <h3>Arquitectura Digital &amp; <br>Desarrollo Web</h3> 
                         <p>Construimos plataformas digitales que impulsan tu negocio. Diseñamos páginas web fluidas, intuitivas y visualmente impecables. Una herramienta estratégica para atraer clientes, generar confianza y escalar tus ventas las 24 horas del día.</p>
                     </div>
                 </div>
