--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <em class="monolith-title-line mtl-delay">PROYECTOS</em>
             </h2>
         </div>
-        <a href="proyectos.html" class="monolith-cta-btn">
+        <a href="/proyectos" class="monolith-cta-btn">
             <span class="monolith-cta-label">El archivo completo</span>
             <span class="monolith-cta-arrow">→</span>
         </a>
@@ -264,7 +264,7 @@
         </div>
 
     </div>
-    <a href="proyectos.html" class="monolith-cta-btn monolith-cta-mobile">
+    <a href="/proyectos" class="monolith-cta-btn monolith-cta-mobile">
         <span class="monolith-cta-label">El archivo completo</span>
         <span class="monolith-cta-arrow">→</span>
     </a>
