--- a/proyectos.html
+++ b/proyectos.html
@@ -370,7 +370,7 @@
 
     <div class="ar-featured">
         <video class="ar-featured-video" autoplay loop muted playsinline>
-            <source src="videos/FIATcomercial.mp4" type="video/mp4">
+            <source src="FIATcomercial.mp4" type="video/mp4">
         </video>
         <div class="ar-featured-overlay"></div>
         <div class="ar-featured-content">
