--- a/proyectos.html
+++ b/proyectos.html
@@ -278,7 +278,27 @@
     }
     .ar-featured-content {
         position: absolute; bottom: 48px; left: 7vw;
-        display: flex; flex-direction: column; gap: 10px;
+        display: flex; flex-direction: column; gap: 10px; align-items: flex-start;
+    }
+    .ar-featured-cta {
+        margin-top: 20px;
+        background: transparent;
+        border: 1px solid rgba(255,255,255,0.4);
+        color: #fff;
+        font-family: var(--sans);
+        font-size: 0.65rem;
+        font-weight: 600;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        padding: 14px 32px;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: background 0.3s ease, border-color 0.3s ease;
+        align-self: flex-start;
+    }
+    .ar-featured-cta:hover {
+        background: var(--accent);
+        border-color: var(--accent);
     }
     .ar-featured-label {
         font-family: var(--sans); font-size: 0.65rem;
@@ -295,27 +315,7 @@
     }
     @media (max-width: 768px) {
         .ar-featured { height: 50vh; }
-        .ar-featured-sound { bottom: 28px; right: 5vw; padding: 9px 18px; }
     }
-
-    /* ── FEATURED · SOUND TOGGLE ─────────────────────────────────────── */
-    .ar-featured-sound {
-        position: absolute; bottom: 48px; right: 7vw; z-index: 4;
-        display: flex; align-items: center; gap: 9px; cursor: pointer;
-        font-family: var(--sans); font-size: 0.58rem; font-weight: 600;
-        letter-spacing: 3px; text-transform: uppercase;
-        color: rgba(255,255,255,0.55);
-        border: 1px solid rgba(255,255,255,0.18);
-        padding: 11px 22px; border-radius: 50px;
-        background: rgba(0,0,0,0.35);
-        backdrop-filter: blur(14px); -webkit-backdrop-filter: blur(14px);
-        transition: color 0.3s ease, border-color 0.3s ease, background 0.3s ease;
-        user-select: none;
-    }
-    .ar-featured-sound:hover { color: #fff; border-color: rgba(255,255,255,0.45); }
-    .ar-featured-sound.is-unmuted { color: #fff; border-color: var(--accent); background: rgba(211,84,0,0.18); }
-    .ar-featured-sound .fs-icon { font-size: 0.75rem; line-height: 1; transition: transform 0.3s var(--cubic); }
-    .ar-featured-sound.is-unmuted .fs-icon { transform: scale(1.15); color: var(--accent); }
     </style>
 </head>
 <body>
@@ -377,10 +377,9 @@
             <span class="ar-featured-label">Proyecto Destacado</span>
             <h2 class="ar-featured-title">FIAT Venezuela</h2>
             <p class="ar-featured-sub">Cinematografía comercial · 2025</p>
-        </div>
-        <div class="ar-featured-sound hover-target" id="featuredSoundBtn">
-            <span class="fs-icon" id="featuredSoundIcon">&#9654;</span>
-            <span id="featuredSoundLabel">ACTIVAR SONIDO</span>
+            <button class="ar-featured-cta hover-target" data-yt-id="MqXLyt2LGLI">
+                Ver Comercial &#9654;
+            </button>
         </div>
     </div>
 
@@ -708,23 +707,10 @@
     arModal.addEventListener('click', e => { if (e.target === arModal) closeModal(); });
     document.addEventListener('keydown', e => { if (e.key === 'Escape') closeModal(); });
 
-    /* ── FEATURED · PLAY / MUTE TOGGLE ─────────────────────────────── */
-    (function() {
-        const featVid   = document.querySelector('.ar-featured-video');
-        const soundBtn  = document.getElementById('featuredSoundBtn');
-        const soundIcon = document.getElementById('featuredSoundIcon');
-        const soundLbl  = document.getElementById('featuredSoundLabel');
-        if (!featVid || !soundBtn) return;
-
-        soundBtn.addEventListener('click', function(e) {
-            e.stopPropagation();
-            const muted = featVid.muted = !featVid.muted;
-            soundBtn.classList.toggle('is-unmuted', !muted);
-            soundIcon.innerHTML = muted ? '&#9654;' : '&#9646;&#9646;';
-            soundLbl.textContent = muted ? 'ACTIVAR SONIDO' : 'SILENCIAR';
-            if (!muted) featVid.play().catch(() => {});
-        });
-    })();
+    /* ── FEATURED · CTA ─────────────────────────────────────────────── */
+    document.querySelector('.ar-featured-cta').addEventListener('click', function() {
+        openModal(this.dataset.ytId);
+    });
 
     </script>
 </body>
