--- a/index.html
+++ b/index.html
@@ -442,9 +442,7 @@
             </form>
             <div class="form-success" id="formSuccess">
                 <div class="fs-z-wrapper">
-                    <svg class="fs-z-svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                        <path class="fs-z-path" d="M 12,20 L 88,20 L 12,80 L 88,80"/>
-                    </svg>
+                    <img src="logo.png" alt="ZENIQ" style="width:100%;height:100%;object-fit:contain;">
                 </div>
                 <div class="fs-line"></div>
                 <span class="fs-label">Solicitud enviada</span>
